--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,7 +22,7 @@
 }
 
 .light-mode{
-    --color-primary: #FFFFFF;
+    --color-primary: rgb(231, 230, 230);
     --color-secondary: teal;
     --color-white: #454e56;
     --color-black: #000;
@@ -233,16 +233,17 @@ h1.name{
     height: 90%;
     width: 87%;
     margin-left: 4rem;
-    background-color: var(--color-black);
+    background-color: none;
     transition: all .4s ease-in-out;
 }
 
 img{
+    border-radius: 50%;
     width: 100%;
     height: 100%;
     object-fit: cover;
     transition: all .4s ease-in-out;
-    filter: grayscale(100%);
+    
   
 }
 /*header content css ends here*/
@@ -778,6 +779,13 @@ h4.stat-titile {
     align-items: center;
     justify-content: center;
     font-size: 1.3rem;
+}
+.footer p{
+    text-align: center;
+}
+.footer{
+    height: 60px;
+    background-color: var(--color-grey-4);
 }
 
 @import './_responsive.css';
