--- a/styles/style.css
+++ b/styles/style.css
@@ -783,6 +783,7 @@ h4.stat-titile {
 .footer p{
     text-align: center;
     color:var(--color-grey-2);
+    font-size: x-small;
 }
 p.foot-1 {
     padding-top: 10px;
