--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,140 +1,3 @@
-@media screen and (max-width: 600px){
-
-    h1.name {
-        margin-top: 55px;
-    }
-    .main-title{
-        margin-top: 80px;
-
-    }
-    .main-title .bg-text{
-        font-size: 40px;
-    }
-    .main-title h2{
-        font-size: 40px;
-    }
-    .theme-btn{
-        
-        width: 50px;
-        height: 50px;
-        margin-top: 800px;
-    }
-
-    header{
-
-        padding: 0;
-    }
-    header .right-header{
-        padding: 0 !important;
-    }
-    .header-content {
-        height: 905px;
-        grid-template-columns: 1fr;
-        padding-bottom: 6rem;
-    }
-    .left-header .h-shape{
-        display: none;
-    }
-    .right-header{
-        grid-row: 1;
-        width: 90%;
-        margin: 0 auto;
-    }
-    .header-content .left-header .image{
-        margin: 0 auto;
-        width: 85%;
-    }
-
-    .about-container{
-        grid-template-columns: 1fr;
-    }
-    .about-container .right-about{
-        grid-template-columns: 1fr;
-        padding-top: 2rem;
-    }
-    .about-container .left-about{
-        padding-right: 0;
-    }
-    .left-about p{
-        padding-left: 0;
-    }
-
-    .about-stats .progress-bars{
-        grid-template-columns: 1fr;
-        width: 100%;
-        margin-left: -40px;
-    }
-
-    ._projects {
-        display: inline-block;
-        margin-left: -60px;
-    }
-    ._blogs{
-        display: inline-block;
-    }
-    .blog{
-        margin: 25px;
-    }
-
-    .contact-content-con{
-        flex-direction: column;
-    }
-    .left-contact h4 {
-        text-align: center;
-        margin-top: -40px;
-    }
-
-    .contact-content-con .right-contact{
-        flex: 3;
-        margin-left: 0;
-    }
-    .contact-icons {
-        padding: 10px;
-    }
-    .contact-icon {
-        padding-left: 45px;
-    }
-    .contact-icon {
-        margin-left: 40px;
-    }
-    .contact-content-con .right-contact .control-input-2{
-        flex-direction: column;
-    }
-    .contact-content-con .right-contact .control-input-2:last-child{
-        margin-left: 0;
-        margin-top: 1.5rem;
-    }
-    .right-contact .f-name {
-        margin-bottom: 20px;
-    }
-    .submit-button {
-        margin-left: 310px;
-    }
-.timeline{
-    grid-template-columns: 1fr;
-    padding-bottom: 6rem;
-}
-
-    .section{
-        padding: 2rem 2.5rem !important;
-    }
-    .controls {
-    top: 0;
-    bottom: auto;
-    flex-direction: row;
-    justify-content: center;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
-    background-color: var(--color-black);
-}
-    .control{
-        margin: 1rem .6rem;
-    }
-    .footer{
-        background-color: var(--color-black);
-    }
-}
 
 @media screen and (max-width:1432px){
     h1.name {
@@ -232,7 +95,7 @@
         padding-top: 3rem;
     }
 
-    @media screen and (max-width:700px){
+    @media screen and (max-width:701px){
         .container{
             padding: 7rem 3rem;
         }
@@ -379,4 +242,167 @@
             margin: 1rem .6rem;
         }
     }
+    @media screen and (max-width: 600px){
+
+        h1.name {
+            margin-top: 55px;
+        }
+        .main-title{
+            margin-top: 80px;
     
+        }
+        .main-title .bg-text{
+            font-size: 40px;
+        }
+        .main-title h2{
+            font-size: 40px;
+        }
+        .theme-btn{
+            
+            width: 50px;
+            height: 50px;
+            margin-top: 800px;
+        }
+    
+        header{
+    
+            padding: 0;
+        }
+        header .right-header{
+            padding: 0 !important;
+        }
+        .header-content {
+            height: 905px;
+            grid-template-columns: 1fr;
+            padding-bottom: 6rem;
+        }
+        .left-header .h-shape{
+            display: none;
+        }
+        .right-header{
+            grid-row: 1;
+            width: 90%;
+            margin: 0 auto;
+        }
+        .header-content .left-header .image{
+            margin: 0 auto;
+            width: 85%;
+        }
+    
+        .about-container{
+            grid-template-columns: 1fr;
+        }
+        .about-container .right-about{
+            grid-template-columns: 1fr;
+            padding-top: 2rem;
+        }
+        .about-container .left-about{
+            padding-right: 0;
+        }
+        .left-about p{
+            padding-left: 0;
+        }
+    
+        .about-stats .progress-bars{
+            grid-template-columns: 1fr;
+            width: 100%;
+            margin-left: -40px;
+        }
+    
+        ._projects {
+            display: inline-block;
+            margin-left: -60px;
+        }
+        ._blogs{
+            display: inline-block;
+        }
+        .blog{
+            margin: 25px;
+        }
+    
+        .contact-content-con{
+            flex-direction: column;
+        }
+        .left-contact h4 {
+            text-align: center;
+            margin-top: -40px;
+        }
+    
+        .contact-content-con .right-contact{
+            flex: 3;
+            margin-left: 0;
+        }
+        .contact-icons {
+            padding: 10px;
+        }
+        .contact-icon {
+            padding-left: 45px;
+        }
+        .contact-icon {
+            margin-left: 40px;
+        }
+        .contact-content-con .right-contact .control-input-2{
+            flex-direction: column;
+        }
+        .contact-content-con .right-contact .control-input-2:last-child{
+            margin-left: 0;
+            margin-top: 1.5rem;
+        }
+        .right-contact .f-name {
+            margin-bottom: 20px;
+        }
+        .submit-button {
+            margin-left: 310px;
+        }
+    .timeline{
+        grid-template-columns: 1fr;
+        padding-bottom: 6rem;
+    }
+    
+        .section{
+            padding: 2rem 2.5rem !important;
+        }
+        .controls {
+        top: 0;
+        bottom: auto;
+        flex-direction: row;
+        justify-content: center;
+        left: 50%;
+        transform: translateX(-50%);
+        width: 100%;
+        background-color: var(--color-black);
+    }
+        .control{
+            margin: 1rem .6rem;
+        }
+        .footer{
+            background-color: var(--color-black);
+        }
+    }
+    
+    @media screen and (max-width: 400px)
+    {
+        ._projects {
+            display: flex;
+            flex-direction: column;
+            padding-right: 60px;
+        }
+        .left-contact h4 {
+            text-align: center;
+            margin-top: -108px;
+            color: var(--color-grey-3);
+        }
+        .contact-info .contacts-item {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .contacts-item .icon {
+         display: grid;
+         grid-template-columns: 20px 1fr;
+         }   
+         .submit-button {
+            margin-left: 140px;
+        }
+    }
